# DocuTrace

./: .gitignore  README.md
.github/workflows/: docker-backend.yml  tauri-build.yml  tauri-dev.yml
apps/tauri/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/tauri/src/: App.tsx  main.tsx
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/src/: main.rs
apps/tauri/src/components/: file-upload.tsx
apps/tauri/src/hooks/: useBackend.ts
apps/tauri/src/interfaces/: backend-interface.ts  index.ts
apps/tauri/src/lib/: queryClient.ts
apps/tauri/src/services/: backend-service.ts
apps/tauri/src/store/: useAuthStore.ts  useViewStore.ts
apps/tauri/src/views/: Admin.tsx  Home.tsx  Settings.tsx
backend/: .clang-format  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  vcpkg.json
backend/include/controllers/: health_controller.hpp  search_controller.hpp  upload_controller.hpp
backend/include/infrastructure/: bm25_engine.hpp
backend/include/models/: search_models.hpp
backend/include/routes/: health.hpp
backend/include/services/: search_service.hpp
backend/include/shared/: env_utils.hpp  text_utils.hpp
backend/include/utils/: env.utils.hpp  str.utils.hpp
backend/src/: CMakeLists.txt  main.cpp
backend/src/controllers/: health_controller.cpp  search_controller.cpp  upload_controller.cpp
backend/src/infrastructure/: bm25_engine.cpp
backend/src/routes/: health.cpp
backend/src/services/: search_service.cpp
backend/src/shared/: env_utils.cpp  text_utils.cpp
backend/src/utils/: env.utils.cpp  str.utils.cpp
test_data/: generator.py
